--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+.grey-background{
+  background-color: #242424;
+  padding: 20px 20px 15px;
+  position: sticky;
+  top: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #121212;
+  color:white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.horizontal-scroll{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  margin-top: 10px;
+  gap: 10px;
+  overflow-x: auto;
+  overflow-y: hidden;
+
+  /* Hide ScrollBar */
+  -ms-overflow-style: none;
+  scrollbar-width: none;  
+  ::-webkit-scrollbar {
+      display: none;
+    }
 }
 
-.App-link {
-  color: #61dafb;
+.genre-tab{
+  padding: 7px 12px;
+  border-radius: 5px;
+  background-color: #484848;
+  min-width: max-content;
+  cursor: pointer;
+  &.active,&:hover{
+    background-color: red;
+    color: white;
+  }
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container{
+  display: flex;
+  flex-wrap: wrap;
+  gap:20px;
+  margin: 20px;
+  overflow-y: auto;
+  align-items: flex-start;
+  .card-container{flex: 1 0 40%;}
+  
 }
